This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: A possible reference leak in itertools.count()
Type: Stage: resolved
Components: Extension Modules Versions: Python 3.8, Python 3.7, Python 2.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: ZackerySpytz, miss-islington, rhettinger, serhiy.storchaka
Priority: normal Keywords: patch

Created on 2019-03-26 05:36 by ZackerySpytz, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 12551 merged ZackerySpytz, 2019-03-26 05:38
PR 12552 merged miss-islington, 2019-03-26 06:07
PR 12554 merged miss-islington, 2019-03-26 06:42
Messages (4)
msg338853 - (view) Author: Zackery Spytz (ZackerySpytz) * (Python triager) Date: 2019-03-26 05:36
"long_step" is leaked in itertools_count_impl() if the type->tp_alloc() call fails.
msg338854 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2019-03-26 06:05
New changeset 0523c39e7720b82b38ad793d3f1a5681adcdf873 by Serhiy Storchaka (Zackery Spytz) in branch 'master':
bpo-36430: Fix a possible reference leak in itertools.count(). (GH-12551)
https://github.com/python/cpython/commit/0523c39e7720b82b38ad793d3f1a5681adcdf873
msg338856 - (view) Author: miss-islington (miss-islington) Date: 2019-03-26 06:26
New changeset e0fe25be1ecbdf4abd1b0edd4aabacc4d75dec41 by Miss Islington (bot) in branch '3.7':
bpo-36430: Fix a possible reference leak in itertools.count(). (GH-12551)
https://github.com/python/cpython/commit/e0fe25be1ecbdf4abd1b0edd4aabacc4d75dec41
msg338859 - (view) Author: Raymond Hettinger (rhettinger) * (Python committer) Date: 2019-03-26 07:55
New changeset c0dce6aa2ce1ff408170bb8de2ebde3bfd8aa6cf by Raymond Hettinger (Miss Islington (bot)) in branch '2.7':
bpo-36430: Fix a possible reference leak in itertools.count(). (GH-12551) (GH-12554)
https://github.com/python/cpython/commit/c0dce6aa2ce1ff408170bb8de2ebde3bfd8aa6cf
History
Date User Action Args
2022-04-11 14:59:13adminsetgithub: 80611
2019-03-26 08:20:40serhiy.storchakasetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2019-03-26 07:55:41rhettingersetnosy: + rhettinger
messages: + msg338859
2019-03-26 06:42:50miss-islingtonsetpull_requests: + pull_request12501
2019-03-26 06:26:44miss-islingtonsetnosy: + miss-islington
messages: + msg338856
2019-03-26 06:07:53miss-islingtonsetpull_requests: + pull_request12499
2019-03-26 06:05:37serhiy.storchakasetnosy: + serhiy.storchaka
messages: + msg338854
2019-03-26 05:38:40ZackerySpytzsetkeywords: + patch
stage: patch review
pull_requests: + pull_request12498
2019-03-26 05:36:11ZackerySpytzcreate