bpo-36430: Fix a possible reference leak in itertools.count(). (GH-12551)

(cherry picked from commit 0523c39e7720b82b38ad793d3f1a5681adcdf873)

Co-authored-by: Zackery Spytz <zspytz@gmail.com>